--- a/testar/resources/settings/webdriver_rascal_asserts/test.settings
+++ b/testar/resources/settings/webdriver_rascal_asserts/test.settings
@@ -171,7 +171,7 @@ ProtocolSpecificSetting_5 =
 #################################################################
 
 ExtendedOracles =
-ExternalOracles = AssertWidgetSelector
+ExternalOracles = AssertWidgetSelector,AssertWidgetStatus,AssertWidgetContains
 
 #################################################################
 # Specify the widget attributes that you wish to visualize during Spy Mode. Use a semicolon separated list.
