Add settings to configure webdriver constants

--- a/testar/resources/workflow/settings/test_gradle_workflow_webdriver_parabank/test.settings
+++ b/testar/resources/workflow/settings/test_gradle_workflow_webdriver_parabank/test.settings
@@ -108,6 +108,12 @@ ProtocolClass = test_gradle_workflow_webdriver_parabank/Protocol_test_gradle_wor
 AbstractStateAttributes = WebWidgetId
 
 #################################################################
+# WebDriver advanced state fetcher configuration
+#################################################################
+WebIgnoredTags = script;noscript;head;meta;style;link;svg;canvas;iframe
+WebIgnoredAttributes = xpath
+
+#################################################################
 # WebDriver features
 #################################################################
 ClickableClasses = 
