--- a/testar/resources/settings/webdriver_mendix_academy_llm/test.settings
+++ b/testar/resources/settings/webdriver_mendix_academy_llm/test.settings
@@ -146,6 +146,12 @@ LlmHistorySize = 5
 LlmTestGoals = A student decides to study the Agile Awareness course\\nThen 1. Introduction;A student starts the first Welcome module of the Introduction  lesson\\nThen Welcome to Agile Awareness
 
 #################################################################
+# WebDriver advanced state fetcher configuration
+#################################################################
+WebIgnoredTags = script;noscript;head;meta;style;link;svg;canvas;iframe
+WebIgnoredAttributes = xpath
+
+#################################################################
 # WebDriver features
 #################################################################
 ClickableClasses = 
