custom drawnames protocol

--- a/testar/resources/settings/webdriver_newspark_drawnames_llm/test.settings
+++ b/testar/resources/settings/webdriver_newspark_drawnames_llm/test.settings
@@ -149,7 +149,7 @@ LlmTestGoals =
 # WebDriver advanced state fetcher configuration
 #################################################################
 WebIgnoredTags = script;noscript;head;meta;style;link;svg;canvas;iframe
-WebIgnoredAttributes = xpath;innerHTML;outerHTML
+WebIgnoredAttributes = xpath
 
 #################################################################
 # WebDriver features
