--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ subprojects {
     }
     repositories {
         mavenCentral()
+        maven { url = uri("https://releases.usethesource.io/maven/") } // Rascal maven repo
     }
     dependencies {
         testImplementation group:'junit', name:'junit', version:'4.12'
