--- a/testar/resources/settings/webdriver_llm_state_model_evaluator/test.settings
+++ b/testar/resources/settings/webdriver_llm_state_model_evaluator/test.settings
@@ -176,7 +176,8 @@ AbstractStateAttributes = WebWidgetId,WebWidgetName,WebWidgetStyle
 #################################################################
 
 LlmPlatform = OpenAI
-LlmModel = gpt-4o-mini
+LlmModel = gpt-5-mini
+LlmReasoning = minimal
 LlmHostUrl = https://api.openai.com/v1/chat/completions
 LlmAuthorizationHeader = Bearer %OPENAI_API%
 LlmActionFewshotFile = prompts/fewshot_openai_action.json
