Update autolink llm protocols

--- a/testar/resources/settings/webdriver_b00_spark_scriptless/test.settings
+++ b/testar/resources/settings/webdriver_b00_spark_scriptless/test.settings
@@ -136,7 +136,8 @@ AbstractStateAttributes = WebWidgetTextContent,WebWidgetPlaceholder
 #################################################################
 
 LlmPlatform = OpenAI
-LlmModel = gpt-4o-mini
+LlmModel = gpt-5-mini
+LlmReasoning = minimal
 LlmHostUrl = https://api.openai.com/v1/chat/completions
 LlmAuthorizationHeader = Bearer %OPENAI_API%
 LlmActionFewshotFile = prompts/fewshot_openai_action.json
