--- a/testar/resources/settings/02_webdriver_parabank/test.settings
+++ b/testar/resources/settings/02_webdriver_parabank/test.settings
@@ -225,7 +225,7 @@ ProtocolSpecificSetting_5 =
 #################################################################
 
 ExtendedOracles =
-ExternalOracles = DebugWidgetSelector
+ExternalOracles = WelcomeJohnSmithIsVisible$79
 
 #################################################################
 # Sets whether to display TESTAR dialog. If false is used, then TESTAR will run in the mode of the Mode property
