Update android protocols

--- a/testar/resources/settings/android_generic/test.settings
+++ b/testar/resources/settings/android_generic/test.settings
@@ -78,8 +78,8 @@ ProcessLogs = .*.*
 # these will be added to the protocol_filter.xml file.
 #################################################################
 
-ClickFilter = .*[sS]ave.*|.*[gG]uardar.*|.*[fF]ormat.*|.*[fF]ormatear.*|.*[pP]rint.*|.*[iI]mprimir.*|.*[eE]mail.*|.*[fF]ile.*|.*[aA]rchivo.*|.*[mM]inimize.*|.*[mM]inimizar.*|.*[dD]isconnect.*|.*[dD]esconectar.*
-TagsToFilter = Title
+ClickFilter = .*Graphics.*
+TagsToFilter = AndroidAccessibilityId;AndroidText
 
 #################################################################
 # Processfilter
