update orientdb default test credentials

--- a/testar/resources/workflow/settings/test_gradle_workflow_webdriver_generic/test.settings
+++ b/testar/resources/workflow/settings/test_gradle_workflow_webdriver_generic/test.settings
@@ -108,8 +108,8 @@ DataStoreType = plocal
 DataStoreServer = localhost
 DataStoreDirectory = orientdb-community-3.2.38/databases
 DataStoreDB = testar
-DataStoreUser = admin
-DataStorePassword = admin
+DataStoreUser = testar
+DataStorePassword = testar
 DataStoreMode = instant
 ApplicationName = parabank
 ApplicationVersion = 1
