--- a/testar/resources/workflow/settings/test_gradle_workflow_desktop_generic_custom_abstraction/test.settings
+++ b/testar/resources/workflow/settings/test_gradle_workflow_desktop_generic_custom_abstraction/test.settings
@@ -104,8 +104,8 @@ DataStoreType = plocal
 DataStoreServer = localhost
 DataStoreDirectory = orientdb-community-3.2.38\\databases
 DataStoreDB = testar
-DataStoreUser = admin
-DataStorePassword = admin
+DataStoreUser = testar
+DataStorePassword = testar
 DataStoreMode = instant
 ApplicationName = notepad
 ApplicationVersion = 1
