update orientdb default protocol credentials

--- a/testar/resources/settings/webdriver_llm_state_model_evaluator/test.settings
+++ b/testar/resources/settings/webdriver_llm_state_model_evaluator/test.settings
@@ -153,8 +153,8 @@ DataStoreType = plocal
 DataStoreServer = 
 DataStoreDirectory = settings/webdriver_llm_state_model_evaluator/orientdb-community-3.2.38/databases
 DataStoreDB = testar
-DataStoreUser = admin
-DataStorePassword = admin
+DataStoreUser = testar
+DataStorePassword = testar
 DataStoreMode = instant
 ActionSelectionAlgorithm = random
 StateModelStoreWidgets = false
